--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>一怀早上好</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><strong>我是佳斌</strong>, 这是一个简单的问候<br />
+					青山已碎，燕子空回<br />
+					crafted by <a href="http://html5up.net">走走思</a>.</h1>
 				</div>
 			</header>
 
@@ -29,12 +29,12 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Be kind, <br />
+							for everyone is fighting a hard battle.</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>老王是我在北京见过最帅的出租车司机，讲话也实在，他跟我说每个月晚上都会遇到一两个不带钱打车的姑娘，到了目的地就说反正也没钱，问他要不上去坐坐。我好奇的打断问他那你上去过吗，他说就一次，我狡黠一笑问是特好看吧。老王很诚恳地说也没有，主要是那姑娘从北五环坐到木樨园，实在太远了。</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="#" class="button">和我聊聊吧</a></li>
 						</ul>
 					</section>
 
