--- a/show.html
+++ b/show.html
@@ -132,7 +132,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
             //想说的话
-            S.UI.simulate("{{陈婷小朋友}}|我是|黄佳斌|Nice|to|Meet|You|#countdown 3|#time");
+            S.UI.simulate("陈婷小朋友|我是佳斌|第一个520快乐|#countdown 3|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
